[package]
name = "babylon-ibc-limits"
description = "WASM transaction to set IBC rate limits for Babylon token on housefire."
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
namada_tx_prelude.workspace = true
rlsf.workspace = true
getrandom.workspace = true

[lib]
crate-type = ["cdylib"]
